Artists now correctly positioned
No longer comes out of the box when browser resized so it scales with it. Also positioning is correct and is nice neat and pleasing to look at

--- a/style.css
+++ b/style.css
@@ -185,14 +185,15 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: -10px;
+    margin: -1%;
   }
   
   .person {
     text-align: center;
-    margin: 10px;
-    flex-basis: calc(33.33% - 20px);
-    max-width: calc(33.33% - 20px);
+    margin: 1%;
+    flex-basis: calc(33.33% - 2%);
+    max-width: calc(33.33% - 2%);
+    box-sizing: border-box;
   }
   
   .person:last-child {
@@ -200,8 +201,8 @@ h3 {
   }
   
   .person img {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: auto;
     object-fit: cover;
     border-radius: 50%;
   }
@@ -211,4 +212,4 @@ h3 {
     text-decoration: none;
     white-space: normal;
   }
-   
+  
